external-dns.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:latest
        #env:
        #  - name: AZURE_REGION
        #    value: eastus # put your CloudMap NameSpace region
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=revanthkube.ml # (optional) limit to only example.com domains; change to match the zone created above.
        - --provider=azure
        - --txt-owner-id=revanthkube.ml
        - --azure-resource-group=domainRG
        - --azure-subscription-id=e59b8928-47d9-474b-b240-106138563ad5
        #- --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
        #- --azure-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
        - --registry=txt
        volumeMounts:
          - name: azure-config-file
            mountPath: /etc/kubernetes
            readOnly: true
      volumes:
      - name: azure-config-file
        secret:
          secretName: azure-config-file
