LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
    external-dns.alpha.kubernetes.io/hostname: ingress.revanthkube.ml
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: http
  - port: 443
    name: https
    targetPort: https
  selector:
    app: ingress-nginx
