postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database1
spec:
  #type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: database1
