chatapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chatapp-ingress
  annotations:
   kubernetes.io/ingress.class: "nginx"
   #kubernetes.io/tls-acme: "true"
   #nginx.ingress.kubernetes.io/rewrite-target: /
   #cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: chatapp.revanthkube.ml  
    http:
      paths:
      - path: /
        backend:
          serviceName: chatapp-one
          servicePort: 80
  - host: fundoo.revanthkube.ml
    http:
      paths:
      - backend:
          serviceName: chatapp-one
          servicePort: 80
        path: /
 # tls:
 #   - secretName: tls-secret
 #     hosts:
 #       - chatapp.revanthkube.ml
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: chatapp-ingress-static
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    #cert-manager.io/cluster-issuer: letsencrypt
#spec:
 # tls:
 # - hosts:
 #   - chatapp.revanthkube.ml
 #   secretName: tls-secret
#  rules:
#  - host: chatapp.revanthkube.ml
#    http:
#      paths:
#      - backend:
#          serviceName: chatapp-one
#          servicePort: 80
#       path: /static(/|$)(.*)
